--- a/css/styles.css
+++ b/css/styles.css
@@ -159,12 +159,17 @@ body {
 
 /* Hero section */
 .hero {
-    padding: 200px 270px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+
+.centered {
     text-align: center;
 }
 
 .hero_headling {
     max-width: 696px;
+    margin: auto;
     margin-bottom: 30px;
     font-weight: 900;
     font-size: 44px;
