Updates for files according to mentor commentss

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,9 @@ body {
 
 /* STUDIO PAGE */
 /* header styles */
-.header .container {
+.header {
+    padding-top: 24px;
+    padding-bottom: 24px;
     border-bottom: 1px solid #ECECEC;
 }
 
@@ -86,8 +88,6 @@ body {
 
 .header__link {
     display: block;
-    padding-top:24px;
-    padding-bottom: 24px;
     color: var(--title-text-color);
     font-weight: 500;
     font-size: 14px;
@@ -285,6 +285,7 @@ body {
     width: calc((100% - 3*30px) / 4);
     margin-right: 30px;
     padding-bottom: 30px;
+    background-color: var(--primary-white-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
